# magnetfinder

./: Cargo.toml  README.md  Settings.toml
.github/workflows/: ci.yaml
src/: interface.rs  lib.rs  main.rs  nyaa.rs  piratebay.rs  settings.rs  types.rs  yts.rs
tests/: scraper_tests.rs
