[package]
name = "magnetfinder"
version = "0.1.0"
authors = ["bleusakura"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
comfy-table = "4.1.1"
