[package]
name = "magnetfinder"
version = "0.1.0"
authors = ["bleusakura"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
comfy-table = "4.1.1"
config = "0.11.0"
serde = { version = "1.0.127", features = ["derive"] }
dirs = "3.0.2"
clap = "2.33.3"