[package]
name = "magnetfinder"
version = "0.2.0"
authors = ["bleusakura"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/bleusakura/magnetfinder"
repository = "https://github.com/bleusakura/magnetfinder"
description = "Multi-threaded CLI torrent scraper & aggregator"
keywords = ["cli", "torrent"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "socks"] }
scraper = "0.12.0"
comfy-table = "4.1.1"
config = "0.11.0"
directories = "3.0.2"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

